expenditures page advertisements page

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
+    <!-- <script src="js/jspdf.min.js"></script>
+<script src="js/addhtml.js"></script>
+<script src="js/html2canvas.min.js"></script> -->
     <div id="root">
         <div class="splash-screen">
             <div class="splash-container">
